--- a/public/admin/assets/css/custom.css
+++ b/public/admin/assets/css/custom.css
@@ -154,3 +154,9 @@ body.dark-only .btn.btn-white {
     transition: 0.5s;
 }
 
+.category-image img,
+    .no-filter {
+        filter: none !important;
+        -webkit-filter: none !important;
+    }
+
